# s22-soft-shell

./: .gitignore  CONTRIBUTORS  LICENSE  MEETING_MINUTES.md  Makefile  README.md
st_interpret/: Cargo.toml  build.sh  cbindgen.toml  clean.sh  test.sh
st_interpret/src/: ast.rs  calculator1.lalrpop  capi.rs  lib.rs  parser.lalrpop  prog_handle.rs  simple_test.txt
st_interpret/tests/: capi_integration_test.rs  capi_test.c  integration_test.rs
st_interpret/tests/test_inputs/execution/st_stretch/: stretch_pow.st
st_interpret/tests/test_inputs/execution/st_subset_1/: 01_Bool.st  01_Bool_01.st  01_Int.st  01_Multi.st  01_NestedBool.st  01_NestedInt.st  01_NestedReal.st  01_Real.st  01_mixed.st  01_truncate.st
st_interpret/tests/test_inputs/execution/st_subset_3-4/: 03_add.st  03_sub.st  04_div.st  04_mul.st  04_testA.st
st_interpret/tests/test_inputs/execution/st_subset_5-6/: 05_And.st  05_Or.st  05_Xor.st  06_IF_Elsif_Else.st  06_If.st  (+3 more)
st_interpret/tests/test_inputs/misc/: 09_Main_Add_Nested.st  intidentityfunction.st  nestedaddfunction.st
st_interpret/tests/test_inputs/st_subset_1/: 01_Bool.st  01_Int.st  01_NestedBool.st  01_Real.st  BlockComments.st  LineComments.st
st_interpret/tests/test_inputs/st_subset_3-4/: 03_add.st  03_sub.st  04_div.st  04_mul.st  04_testA.st
st_interpret/tests/test_inputs/st_subset_5-6/: 05_And.st  06_IF_Elsif_Else.st  06_If.st  06_If_Else.st  06_If_Nested.st
st_interpret/tests/test_inputs/st_subset_7/: 07_Equality.st  07_Less_Than.st  07_Test_A.st  07_While.st  07_While_If.st  07_While_Nested.st
st_interpret/tests/test_inputs/st_subset_8-9/: 09_Main_Add.st  09_Main_Avg.st  09_Main_Context_Check.st
(+97 files in other folders)
