[package]
name = "st_interpret"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Note: Picked dynamic lib for easy re-generation of library files. Can be changed later.
[lib]
name = "st_interpret"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"] # Creates rust and dynamic c lib

[dependencies]
