[package]
name = "st_interpret"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Note: Picked dynamic lib for easy re-generation of library files. Can be changed later.
[lib]
name = "st_interpret"
path = "src/lib.rs"

# Using cargo-c so crate-type doesn't need to be defined
[features]
capi = []

[dependencies]
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
chrono = "0.4"
num-traits = "0.2.8"

[dev-dependencies]
inline-c = "0.1"

[build-dependencies]
cbindgen = "0.20"
lalrpop = "0.19.7"